--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 2.8)
+add_definitions(-std=c++11)
 project(flv2mp4)
 
 set(CMAKE_CXX_STANDARD 11)
